<resources>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="userLogin">로그인</string>
    <string name="userRegister">회원가입</string>
    <string name="login_id">아이디 </string>
    <string name="login_pw">패스워드 </string>
    <string name="register_id">아이디</string>
    <string name="register_id_check">중복확인</string>
    <string name="register_pw">패스워드</string>
    <string name="register_pw_check">패스워드 체크</string>
    <string name="register_name">이름</string>
    <string name="register_email">이메일</string>
    <string name="registerBtn">C R E A T E  &#160; &#160;A C C O U N T</string>
    <string name="register_phone">핸드폰번호</string>
    <string name="register_car">소유차량 (있는 경우)</string>

    <string name="app_name">GREEN RIGHT</string>
    <string name="mainText">김예솔님의 환경 지수는 새싹입니다</string>
    <string name="mainPointTv">현재 보유 포인트: 5600 Point</string>

    <string name="joinText">Join Us</string>
    <string name="loginText">Log In</string>
    <string name="introText3">환경을 지키는\n가장 쉬운 방법,\n지금 바로\n동참하세요</string>
    <string name="introText2">Green Right는\n생활 속\n환경 보호 실천을\n장려합니다.</string>
    <string name="introText1">미세먼지, 쓰레기로\n가득찬 세상 속에서\n살고 계신가요?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="intro_text">Join</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_update_cup">S E A R C H</string>
    <string name="maintv">GREEN MEMBERSHIP</string>
    <string name="mainshoptv">G\nO\nT\nO\nS\nH\nO\nP</string>
    <string name="pointTv">P  56,200</string>
    <string name="mainnews">GREEN NEWS</string>
    <string name="logoTv">G R E E N R I G H T</string>
    <string name="loginBtn">L O G I N</string>

    <string name="map_update_store">S E A R C H</string>

    <string name="introLogo">Less Pollution, The Best Solution</string>
    <string name="useridHint">Username</string>
    <string name="pwHint">●●●●●●●●</string>
    <string name="register">R E G I S T E R</string>
    <string name="walkTv1">T O D A Y\nS T E P S</string>
    <string name="walkTv2">5325</string>
    <string name="walkTv3">G O A L\nS T E P S</string>
    <string name="walkTv4">10000</string>
    <string name="nav_menu_1">내 정보</string>
    <string name="nav_menu_2">포인트 내역</string>
    <string name="nav_menu_3">로그아웃</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">김예솔님 안녕하세요</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="month">이번달 포인트 적립 현황</string>
    <string name="pointList">적립 내역</string>
    <string name="regiId">Your ID</string>
    <string name="regipw">Your Password</string>
    <string name="regirepw">Repeat Password</string>
    <string name="regiEmail">Your Email</string>
    <string name="regiName">Your Name</string>
    <string name="ispossible">사용 가능</string>
    <string name="regi_phone">Your Phone</string>
    <string name="regi_car">If you have a car, input your car Number</string>
    <string name="pointContent">컵 수거 완료 포인트 적립</string>
    <string name="pointDate">2018.05.31</string>
    <string name="pointWon">100Point</string>
    <string name="pname1">[RE:CODE]점퍼 슬리브 스트라이프 스웻 티셔츠</string>
    <string name="pname2">[RE:CODE] pet bag 프린트 점퍼 푸푸 가방</string>
    <string name="price1">98,000</string>
    <string name="price2">49,000</string>
    <string name="company">[RE;CODE]</string>
    <string name="orderTitle">O R D E R</string>
    <string name="orderInfo">주문자 정보</string>
    <string name="check">주문자 정보와 동일</string>
    <string name="gpayBtn">Google Pay</string>
    <string name="kakaopayBtn">Kakao Pay</string>
    <string name="samsungpayBtn">Samsung Pay</string>
    <string name="payBtn">결제하기</string>
    <string name="orderprice">158,000원</string>
    <string name="deliveryPrice">0원</string>
    <string name="finalPrice">158,000원</string>
    <string name="userName">김예솔</string>
    <string name="pointBtn">보유 포인트</string>
    <string name="orderBtn">주문현황</string>
    <string name="updateBtn">내 정보 수정</string>
    <string name="cancelBtn">회원 탈퇴</string>
    <string name="mainUser">     </string>
    <string name="currentPoin">P 0</string>
    <string name="currentPoint">P 0</string>
    <string name="totalCup">13</string>
    <string name="useTitle">그린 마켓</string>
    <string name="usePoint">2000</string>
    <string name="useDay">2018-06-07</string>
    <string name="title_activity_payment_details">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="paypalPayBtn">PayPal</string>
    <string name="postcode">우편번호 검색</string>

</resources>
