<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/mImage"
        android:layout_width="43dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/ic_star" />

    <TextView
        android:id="@+id/mText"
        android:layout_width="230dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/mImage"
        android:paddingTop="10dp"
        android:text="@string/pointContent"
        android:textColor="#313131"
        android:textSize="16dp"
        android:textStyle="bold"
        android:paddingStart="10dp"/>

    <TextView
        android:id="@+id/mDate"
        android:layout_width="230dp"
        android:layout_height="20dp"
        android:layout_below="@+id/mText"
        android:layout_toEndOf="@+id/mImage"
        android:text="@string/pointDate"
        android:textColor="#313131"
        android:textSize="15dp"
        android:paddingStart="10dp"/>

    <TextView
        android:id="@+id/mPoint"
        android:layout_width="111dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/pointWon"
        android:textColor="#f27340"
        android:textSize="20dp" />
</RelativeLayout>