<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="3">



        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical"
            android:weightSum="3">
            <TextView
                android:id="@+id/useDay"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/useDay"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:textSize="15sp"/>
            <TextView
                android:id="@+id/useTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:text="@string/useTitle"
                android:gravity="center_vertical"
                android:paddingStart="20dp"
                android:textSize="20sp"/>

        </LinearLayout>

        <TextView
            android:id="@+id/usePoint"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/usePoint"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textColor="#86af45"
            />
    </LinearLayout>
</LinearLayout>