<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MypageFragment"
    android:orientation="vertical"
    android:weightSum="5">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="3"
        android:orientation="vertical"
        android:background="#ffffff"
        android:layout_marginBottom="5dp">

       <!-- <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20dp"
            android:text="M Y P A G E" />-->

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:layout_margin="10dp"
            android:src="@drawable/user" />

        <TextView
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/userName"
            android:textSize="20sp"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:weightSum="2"
        android:background="#ffffff">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
            android:layout_weight="1"
        android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/pointBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/pointBtn"
                android:background="#86af45"
                android:layout_margin="20dp"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/orderBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/orderBtn"
                android:background="#d6ccd4"
                android:layout_margin="20dp"
                android:textColor="#ffffff"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/updateBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="#bdcebe"
                android:text="@string/updateBtn"
                android:layout_margin="20dp"
                android:textColor="#ffffff"/>

            <Button
                android:id="@+id/cancelBtn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/cancelBtn"
                android:background="#eca1a6"
                android:layout_margin="20dp"
                android:textColor="#ffffff"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>