<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/greenmain"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        app:srcCompat="@drawable/worldwide" />

    <TextView
        android:id="@+id/logoTv"
        android:layout_width="255dp"
        android:layout_height="73dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/yoon360"
        android:gravity="center"
        android:text="@string/logoTv"
        android:textColor="#ffffff"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/register_id_edit"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/logoTv"
        android:layout_marginStart="5dp"
        android:background="@drawable/id_shape"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/ic_account_circle"
        android:ems="10"
        android:hint="@string/regiId"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />


    <Button
        android:id="@+id/register_id_check"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/logoTv"
        android:layout_marginEnd="98dp"
        android:background="@drawable/point_shape3"
        android:text="@string/register_id_check"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/register_pw_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="196dp"
        android:background="@drawable/id_shape"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/ic_lock_outline"
        android:ems="10"
        android:hint="@string/regipw"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"/>

    <EditText
        android:id="@+id/register_pw_check_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="244dp"
        android:background="@drawable/id_shape"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/ic_lock_outline"
        android:ems="10"
        android:hint="@string/regirepw"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"/>

    <EditText
        android:id="@+id/register_email_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="233dp"
        android:background="@drawable/id_shape"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/ic_email"
        android:ems="10"
        android:hint="@string/regiEmail"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"/>

    <EditText
        android:id="@+id/register_name_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="184dp"
        android:background="@drawable/id_shape"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/ic_user_name"
        android:ems="10"
        android:hint="@string/regiName"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"/>

    <TextView
        android:id="@+id/ispossible"
        android:layout_width="71dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/logoTv"
        android:layout_marginEnd="14dp"
        android:background="@drawable/id_shape"
        android:gravity="center"
        android:text="@string/ispossible"
        android:textColor="#ffffff" />

    <EditText
        android:id="@+id/register_phone_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="136dp"
        android:background="@drawable/id_shape"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/ic_phone_android"
        android:ems="10"
        android:hint="@string/regi_phone"
        android:inputType="phone"
        android:paddingStart="15dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"/>

    <EditText
        android:id="@+id/register_car_edit"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="87dp"
        android:background="@drawable/id_shape"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/ic_directions_car"
        android:ems="10"
        android:hint="@string/regi_car"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"/>


    <Button
        android:id="@+id/button5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/point_shape3"
        android:onClick="userRegister"
        android:text="@string/registerBtn"
        android:textColor="#ffffff"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"/>
    <!--
      <EditText
        android:id="@+id/userid"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="241dp"
        android:background="@drawable/id_shape"
        android:drawablePadding="15dp"
        android:drawableStart="@drawable/ic_account_circle"
        android:ems="10"
        android:hint="@string/useridHint"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:textColor="#ffffff"
        android:textColorHint="#ffffff" />


    <TextView
          android:id="@+id/register_id"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/register_id"
          tools:layout_editor_absoluteX="5dp"
          tools:layout_editor_absoluteY="16dp" />




      <TextView
          android:id="@+id/register_pw"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/register_pw" />



      <TextView
          android:id="@+id/register_pw_check"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/register_pw_check" />


      <TextView
          android:id="@+id/register_email"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/register_email" />


      <TextView
          android:id="@+id/register_name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/register_name" />

      <EditText
          android:id="@+id/register_name_edit"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:inputType="textPersonName"/>

      <TextView
          android:id="@+id/register_phone"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/register_phone" />

      <EditText
          android:id="@+id/register_phone_edit"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:inputType="phone" />



      <TextView
          android:id="@+id/register_car"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/register_car" />

      <EditText
          android:id="@+id/register_car_edit"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:ems="10"
          android:inputType="textPersonName" />

      <Button
          android:id="@+id/button5"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/registerBtn"
          android:onClick="userRegister"/>-->
</RelativeLayout>