<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="5dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="143dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <LinearLayout
        android:layout_width="0dp"
            android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical">

            <ImageView
                android:id="@+id/pImage1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                app:srcCompat="@drawable/p6" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="3">

            <TextView
                android:id="@+id/pname1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/pname1"
                android:gravity="bottom"
                android:layout_marginTop="5dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/company"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/company" />

            <TextView
                android:id="@+id/price1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/price1"
                android:gravity="top"
                android:layout_marginBottom="5dp"
                android:textColor="#313131"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>